--- a/whiteCurvesApp/templates/base.html
+++ b/whiteCurvesApp/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Aria is a business focused HTML landing page template built with Bootstrap to help you create lead generation websites for companies and their services.">
+    <meta name="description" content="We offer visa consulting. Expertise in coaching clients to get suitable pathways to relocate. Visa specialties especially study, work, express entry and permanent residence. And so we WELCOME you to engage us for our services. We can’t wait to start a successful journey with you.">
     <meta name="author" content="de Dream Team">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
