--- a/whiteCurvesApp/templates/index.html
+++ b/whiteCurvesApp/templates/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="text-container">
                 <p style="font-size: 20px; line-height: 35px;">
-                    From Ghana to all over the world, start your journey. Take the first step towards a new life at a destination of your choice. We have exclusive packages for all who want to make their dreams of living, working and touring any part of the world come true.
+                    From your country to all over the world, start your journey. Take the first step towards a new life at a destination of your choice. We have exclusive packages for all who want to make their dreams of living, working and touring any part of the world come true.
                 </p>
             </div>    
         </div>
@@ -214,7 +214,6 @@
             <div>
                 <ul>
                     <li><p style="font-size: 20px; line-height: 35px;">To become one of the best consulting firms, aiding individuals to achieve their aims and dreams.</p></li>
-                    <li><p style="font-size: 20px; line-height: 35px;">To become the best Agency with well-educated health personnel to provide a holistic care to the aged.</p></li>
                 </ul>
             </div>
         </div>
