--- a/whiteCurvesApp/templates/layouts/index.html
+++ b/whiteCurvesApp/templates/layouts/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="text-container">
                 <p style="font-size: 20px; line-height: 35px;">
-                    From Ghana to all over the world, start your journey. Take the first step towards a new life at a destination of your choice. We have exclusive packages for all who want to make their dreams of living, working and touring any part of the world come true.
+                    From wherever you are to all over the world, start your journey. Take the first step towards a new life at a destination of your choice. We have exclusive packages for all who want to make their dreams of living, working and touring any part of the world come true.
                 </p>
             </div>    
         </div>
