changes to home

--- a/whiteCurvesApp/templates/layouts/index.html
+++ b/whiteCurvesApp/templates/layouts/index.html
@@ -53,7 +53,8 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-7 order-md-1">
                     <div class="image-container">
-                        <lottie-player class="img-fluid" src="https://assets6.lottiefiles.com/packages/lf20_ep1tn2ew.json"  background="transparent"  speed="1"  style="width: 690px; height: 446px;"  loop  autoplay></lottie-player>
+                        <img style="width: 690px; height: 446px;" class="img-fluid" src="https://uploads-ssl.webflow.com/60858e03fbf8fb59efe69536/60c632c5b2a333c40221e010_money%20pour-min.jpg" alt="">
+{#                        <lottie-player class="img-fluid" src="https://assets6.lottiefiles.com/packages/lf20_ep1tn2ew.json"  background="transparent"  speed="1"  style="width: 690px; height: 446px;"  loop  autoplay></lottie-player>#}
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
