changes to services

--- a/whiteCurvesApp/templates/layouts/services/honeymoon.html
+++ b/whiteCurvesApp/templates/layouts/services/honeymoon.html
@@ -61,6 +61,9 @@
                 around the country and beyond.
                 <br><br>Customer satisfaction is of prime importance to us, and so we have the best team of professionals to ensure your safety, comfortability and above all ultimate fulfillment.
                 <br><br>Are you planning a tour with your organization? We are here to deliver our best from start to finish.
+                <br>Click on the link below to apply now!
+
+                <a class="btn-solid-lg" href="{% url 'honeymoon' %}"></a>
 
             </p>
         </div>
