--- a/whiteCurvesApp/templates/layouts/services/internship.html
+++ b/whiteCurvesApp/templates/layouts/services/internship.html
@@ -49,7 +49,8 @@
 {#                    <li>Stipends</li>#}
 {#                </ol>#}
                 <br><br>Yes! Stipends. Students enjoying in this internship programs are paid.
-            This opportunity is too great to miss. <a href="{% url 'application' %}">Register</a> now and we will gladly turn your dreams into experience.
+                <br>This opportunity is too great to miss. Click on the button below to register now, and we will gladly turn your dreams into experience.
+                <a class="btn-solid-lg" href="{% url 'application' %}"></a>
             </p>
         </div>
     </div>
