changes to services

--- a/whiteCurvesApp/templates/layouts/services/internship.html
+++ b/whiteCurvesApp/templates/layouts/services/internship.html
@@ -50,7 +50,7 @@
 {#                </ol>#}
                 <br><br>Yes! Stipends. Students enjoying in this internship programs are paid.
                 <br>This opportunity is too great to miss. Click on the button below to register now, and we will gladly turn your dreams into experience.
-                <a class="btn-solid-lg" href="{% url 'application' %}"></a>
+                <br><a class="btn-solid-lg" href="{% url 'application' %}">Apply Now</a>
             </p>
         </div>
     </div>
