changes to services

--- a/whiteCurvesApp/templates/layouts/services/honeymoon.html
+++ b/whiteCurvesApp/templates/layouts/services/honeymoon.html
@@ -63,7 +63,7 @@
                 <br><br>Are you planning a tour with your organization? We are here to deliver our best from start to finish.
                 <br>Click on the link below to apply now!
 
-                <a class="btn-solid-lg" href="{% url 'honeymoon' %}">Apply Now</a>
+                <br><br><a class="btn-solid-lg" href="{% url 'honeymoon' %}">Apply Now</a>
 
             </p>
         </div>
