changes to footer

--- a/whiteCurvesApp/templates/inc/footer.html
+++ b/whiteCurvesApp/templates/inc/footer.html
@@ -14,13 +14,13 @@
                         <h4>Company</h4>
                         <ul class="list-unstyled li-space-lg white">
                             <li>
-                                <a class="white" href="#your-link">Services</a>
+                                <a class="white" href="{% url 'internship' %}">Services</a>
                             </li>
                             <li>
-                                <a class="white" href="terms-conditions.html">FAQ</a>
+                                <a class="white" href="terms-conditions.html">Privacy Policy</a>
                             </li>
                             <li>
-                                <a class="white" href="privacy-policy.html">Support</a>
+                                <a class="white" href="mailto:info@wcconsult.ltd">Support</a>
                             </li>
                         </ul>
                     </div> <!-- end of text-container -->
@@ -46,13 +46,13 @@
                         <h4>Social Media</h4>
                         <ul class="list-unstyled li-space-lg">
                             <li>
-                                <a class="white" href="#your-link">Facebook</a>
+                                <a class="white" href="https://www.facebook.com/prida.consults?mibextid=ZbWKwL">Facebook</a>
                             </li>
                             <li>
-                                <a class="white" href="#your-link">Twitter</a>
+                                <a class="white" href="https://twitter.com/Wconsultltd?t=4QpFTCzbQ-bNFOwoXgoUaA&s=08">Twitter</a>
                             </li>
                             <li>
-                                <a class="white" href="#your-link">Instagram</a>
+                                <a class="white" href="https://instagram.com/wconsultltd?igshid=ZDdkNTZiNTM=">Instagram</a>
                             </li>
                         </ul>
                     </div> <!-- end of text-container -->
