--- a/whiteCurvesApp/templates/inc/navbar.html
+++ b/whiteCurvesApp/templates/inc/navbar.html
@@ -58,7 +58,7 @@
 {#        <a class="nav-link page-scroll" href="#intro">FAQ</a>#}
 {#      </li>#}
       <li class="nav-item">
-        <a class="nav-link page-scroll" href="#services">Contact</a>
+        <a class="nav-link page-scroll" href="mailto:info@wcconsult.ltd">Contact</a>
       </li>
 {#      <li class="nav-item">#}
 {#        <a class="nav-link page-scroll" href="#callMe">Fun Fact</a>#}
