added to success

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -854,6 +854,12 @@ input[type=number] {
 	text-align: left;
 }
 
+.success-header{
+	background-color: transparent;
+	color: black;
+	text-align: left;
+}
+
 .service-p{
 	font-size: 18px;
 }
