added to success

--- a/whiteCurvesApp/templates/layouts/success.html
+++ b/whiteCurvesApp/templates/layouts/success.html
@@ -9,12 +9,12 @@
     {% include 'inc/navbar.html' %}
 
     <!-- Header -->
-    <header id="header" class="service-header">
+    <header id="header" class="success-header">
         <div class="header-content">
             <div class="container">
             <div class="row">
                 <div class="honeymoon-header-content">
-                    <h1 style="color: white">Application Form Submitted Successful</h1>
+                    <h1 style="color: white">Application Submitted Successfully</h1>
 {#                    <p style="color: white">Thinking about where and how your honeymoon should go?</p>#}
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
