added to success

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -860,6 +860,11 @@ input[type=number] {
 	text-align: left;
 }
 
+.success-header .header-content{
+	padding: 8rem 10px 2.125rem;
+	color: black;
+}
+
 .service-p{
 	font-size: 18px;
 }
