added to success

--- a/whiteCurvesApp/templates/layouts/success.html
+++ b/whiteCurvesApp/templates/layouts/success.html
@@ -14,7 +14,7 @@
             <div class="container">
             <div class="row">
                 <div class="honeymoon-header-content">
-                    <h1 style="color: white">Application Submitted Successfully</h1>
+                    <h1 style="color: black">Application Submitted Successfully</h1>
 {#                    <p style="color: white">Thinking about where and how your honeymoon should go?</p>#}
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
