added to success

--- a/whiteCurvesApp/templates/layouts/success.html
+++ b/whiteCurvesApp/templates/layouts/success.html
@@ -9,12 +9,12 @@
     {% include 'inc/navbar.html' %}
 
     <!-- Header -->
-    <header id="header" class="success-header">
+    <header id="header" class="service-header">
         <div class="header-content">
             <div class="container">
             <div class="row">
                 <div class="honeymoon-header-content">
-                    <h1 style="color: black">Application Submitted Successfully</h1>
+                    <h1 style="color: white">Application Submitted Successfully</h1>
 {#                    <p style="color: white">Thinking about where and how your honeymoon should go?</p>#}
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -25,8 +25,9 @@
 
     <div class="container py-lg-5 py-4">
         <div class="service-p">
-            <p class="service-p">
-                Thank you for filling out the form. Within the next few minutes you will receive a confirmation email showing we have received your application.
+            <p style="width: 80%" class="service-p">
+                Thank you for filling out the form.
+                <br><br>Within the next few minutes you will receive a confirmation email showing we have received your application.
             </p>
         </div>
     </div>
