added to success

--- a/whiteCurvesApp/templates/layouts/success.html
+++ b/whiteCurvesApp/templates/layouts/success.html
@@ -24,7 +24,7 @@
     <!-- end of header -->
 
     <div class="container py-lg-5 py-4">
-        <div class="service-p">
+        <div class="service-p mb-5">
             <p style="width: 80%" class="service-p">
                 Thank you for filling out the form.
                 <br><br>Within the next few minutes you will receive a confirmation email showing we have received your application.
