added to success

--- a/whiteCurvesApp/templates/base.html
+++ b/whiteCurvesApp/templates/base.html
@@ -62,5 +62,8 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+
+{% load sweetify %}
+{% sweetify %}
 </body>
 </html>    
