--- a/whiteCurvesApp/templates/base.html
+++ b/whiteCurvesApp/templates/base.html
@@ -63,7 +63,13 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 
-{% load sweetify %}
-{% sweetify %}
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+<script>
+    {% for msg in messages %}
+        swal("Application Submitted Successfully", "{{ msg }}", "success");
+    {% endfor %}
+
+</script>
 </body>
-</html>    
+</html>
