--- a/whiteCurvesApp/templates/base.html
+++ b/whiteCurvesApp/templates/base.html
@@ -67,7 +67,7 @@ s0.parentNode.insertBefore(s1,s0);
 
 <script>
     {% for msg in messages %}
-        swal("Application Submitted Successfully", "{{ msg }}", "success");
+        swal("Application Submitted Successfully", "{{ msg }}", "success", {button: "Great!",});
     {% endfor %}
 
 </script>
